# pytreqt

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TEST_COVERAGE.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
spec/: requirements.md
src/pytreqt/: __init__.py  __main__.py  config.py  plugin.py  requirements.py
src/pytreqt/tools/: __init__.py  changes.py  check_newlines.py  common.py  coverage.py  stats.py  update.py
tests/: test_pytreqt_functionality.py
